# retrame-agents-oai

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  CRITICAL-DEPLOYMENT-BLOCKER.md  Dockerfile  NEXT-STEPS.md  README.md  URGENT-DEPLOYMENT-FIX.md  background.md  cloudbuild.yaml  coverage.json  design.md  implementation.md  migration.md  pyproject.toml  shutdown-summary-20250701-174131.txt  specs.md  state.md
app/: main.py
app/agents/.adk/eval_history/: agents_happy_flow_1751242078.099879.evalset_result.json
app/assistants/: __init__.py  __main__.py  client.py  demo_cli.py  orchestrator_assistant.py  state.py  stubs.py
app/assistants/functions/: __init__.py  analyse.py  collect.py  escalate.py  gcs_upload.py  pdf.py
app/callbacks/: lang_detect.py  safety_filters.py  transcript_acc.py
app/config/: base.py
app/services/persistence/: supabase.py
app/services/prompts/: langfuse_cli.py
app/tools/: pdf_generator.py
docs/: beta-smoke-test-guide.md  cloud-run-fix.md  commit-conventions.md  integration-deployment-plan.md  integration-test-guide.md  plan.md  project-manager-guide.md  sprint-retrospective-20250701.md  team-alpha-instructions.md  team-beta-instructions.md  team-progress-update.md  urgent-team-update.md
scripts/: clone_prompts.py  cost-check.sh  emergency-shutdown.sh  update_coverage_badge.py
tests/: conftest.py
tests/integration/: happy_flow.test.json  test_full_flow.py
tests/unit/: test_assistant_functions.py  test_gcs_upload.py  test_lang_detect.py  test_orchestrator_assistant.py  test_orchestrator_crisis_path.py  test_orchestrator_happy_path.py  test_safety_filters.py  test_transcript_acc.py
